<resources>
    <string name="app_name">Reading progress tracker</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="email_text">Email</string>
        <string name="password_text">Password</string>
        <string name="login_text">Login</string>
        <string name="forget_password_text">Forget Password?</string>
        <string name="or_text">or</string>
        <string name="sign_up_text">Sign Up</string>
        <string name="facebook_app_id">580030436060033</string>
        <string name="fb_login_protocol_scheme">fb580030436060033</string>
        <string name="first_name_text">First Name</string>
        <string name="last_name_text">Last Name</string>
        <string name="confirm_password_text">Confirm Password</string>
        <string name="new_password_text">New Password</string>
        <string name="phone_text">Phone</string>
        <string name="t_amp_c_privacy_policy_text"><![CDATA[T&C privacy_policy]]></string>
        <string name="i_accept_text">I Accept</string>
        <string name="log_out_text">Log Out</string>
        <string name="open_nav">Open Navigation Drawer</string>
        <string name="close_nav">Close Navigation Drawer</string>
        <string name="todo">TODO</string>
        <string name="explore_string">EXPLORE</string>
        <string name="LocationDisplay">Location Displayed Here</string>
        <string name="Latitude">Latitude</string>
        <string name="Longitude">Longitude</string>
        <string name="title_activity_maps">Map</string>
        <string name="dropped_pin">Selected Location</string>
</resources>