<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:padding="16dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:orientation="vertical">

        <ImageView
            android:layout_width="124dp"
            android:layout_height="132dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_512"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginBottom="60dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.reading_tracker.TextInputLayout"
            app:errorEnabled="true"
            android:hint="@string/email_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fragment_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_password_layout"
            style="@style/Widget.reading_tracker.TextInputLayout"
            android:hint="@string/password_text"
            app:errorIconDrawable="@null"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fragment_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_fragment_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Wedget.reading_tracker.Button"
            android:text="@string/login_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_fragment_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Wedget.reading_tracker.Button.TextButton"
            android:text="@string/forget_password_text" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp" />


            <ImageButton
                android:id="@+id/login_fragment_google_federate_signin_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/google_logo" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New to Reading progress tracker ?"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_fragment_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:textColor="@color/textColorPrimary"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>